--- a/project/views/groups.handlebars
+++ b/project/views/groups.handlebars
@@ -33,6 +33,8 @@
   <div class="jumbotron">
   <h3>{{ this.name }}<h3>
   <p>{{ this.description }}</p>
+  <a href="/groups/addUser">Join Group</a>
+  <a href="/groups/deleteGroup">Delete Group</a>
 </div>
   {{/each}}
 </div>
